[tool.poetry]
name = "modul11"
version = "0.1.0"
description = ""
authors = ["Hannakua <alucky1181@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
alembic = "^1.12.0"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
